--- a/DScaler/DSRend/DSRend2008.vcproj
+++ b/DScaler/DSRend/DSRend2008.vcproj
@@ -21,7 +21,7 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="..\DScaler\$(ConfigurationName)"
+			OutputDirectory="..\$(ConfigurationName)"
 			IntermediateDirectory=".\Release"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -76,7 +76,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="UnicoWS.lib odbc32.lib odbccp32.lib strmiids.lib version.lib"
-				OutputFile="..\DScaler\Release/DSRend.dll"
+				OutputFile="..\Release/DSRend.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				IgnoreAllDefaultLibraries="false"
@@ -114,7 +114,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
-			OutputDirectory="..\DScaler\$(ConfigurationName)64"
+			OutputDirectory="..\$(ConfigurationName)64"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -170,7 +170,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="UnicoWS.lib odbc32.lib odbccp32.lib strmiids.lib version.lib"
-				OutputFile="..\DScaler\Release/DSRend.dll"
+				OutputFile="..\Release/DSRend.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				IgnoreAllDefaultLibraries="false"
@@ -208,7 +208,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="..\DScaler\$(ConfigurationName)"
+			OutputDirectory="..\$(ConfigurationName)"
 			IntermediateDirectory=".\Debug"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -298,7 +298,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|x64"
-			OutputDirectory="..\DScaler\$(ConfigurationName)64"
+			OutputDirectory="..\$(ConfigurationName)64"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -354,7 +354,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="Unicows.lib odbc32.lib odbccp32.lib strmiids.lib version.lib"
-				OutputFile="..\DScaler\Debug/DSRend.dll"
+				OutputFile="..\Debug/DSRend.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				IgnoreAllDefaultLibraries="false"
