--- a/DScaler5/Filters/Decoders/DivxVideo/DivxVideo2008.vcproj
+++ b/DScaler5/Filters/Decoders/DivxVideo/DivxVideo2008.vcproj
@@ -3,7 +3,7 @@
 	ProjectType="Visual C++"
 	Version="9.00"
 	Name="DivxVideo"
-	ProjectGUID="{514BBF2F-B9E5-4D01-94DE-563236588058}"
+	ProjectGUID="{8E42771A-E254-45D2-BF0F-30E5D0B6BC4F}"
 	RootNamespace="DivxVideo"
 	TargetFrameworkVersion="131072"
 	>
@@ -362,9 +362,11 @@
 	<References>
 		<ProjectReference
 			ReferencedProjectIdentifier="{F4892194-4D03-4CAC-85C0-351DCE97B1A8}"
+			RelativePathToProject=".\Filters\Filter_Lib\Filter_Lib2008.vcproj"
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{0F39947C-180A-48C7-B5DE-454B968ADEB6}"
+			RelativePathToProject=".\GenDMOProp\GenDMOProp2008.vcproj"
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{27FBB7F9-58EE-4362-9B6E-AE35785C5B2C}"
