Add support for per user registration to allow a clean build without elevated permissions

--- a/DScaler5/Filters/Decoders/DivxVideo/DivxVideo2008.vcproj
+++ b/DScaler5/Filters/Decoders/DivxVideo/DivxVideo2008.vcproj
@@ -73,6 +73,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
+				PerUserRedirection="true"
 				AdditionalOptions="/LTCG"
 				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib Rpcrt4.lib dmoguids.lib msdmo.lib strmiids.lib avcodec-52.lib avutil-50.lib"
 				AdditionalLibraryDirectories="$(OutDir)"
@@ -160,6 +161,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
+				PerUserRedirection="true"
 				AdditionalOptions="/LTCG"
 				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib Rpcrt4.lib dmoguids.lib msdmo.lib strmiids.lib avcodec-52.lib avutil-50.lib"
 				AdditionalLibraryDirectories="$(OutDir)"
@@ -244,6 +246,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
+				PerUserRedirection="true"
 				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib Rpcrt4.lib dmoguids.lib msdmo.lib strmiids.lib avcodec-52.lib avutil-50.lib"
 				AdditionalLibraryDirectories="$(OutDir)"
 				ModuleDefinitionFile=".\DivxVideo.def"
@@ -328,6 +331,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
+				PerUserRedirection="true"
 				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib Rpcrt4.lib dmoguids.lib msdmo.lib strmiids.lib avcodec-52.lib avutil-50.lib"
 				AdditionalLibraryDirectories="$(OutDir)"
 				ModuleDefinitionFile=".\DivxVideo.def"
