--- a/DScaler5/GenDMOProp/GenDMOProp2008.vcproj
+++ b/DScaler5/GenDMOProp/GenDMOProp2008.vcproj
@@ -74,6 +74,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
+				PerUserRedirection="true"
 				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib gdi32.lib Dmoguids.lib"
 				ModuleDefinitionFile=".\GenDMOProp.def"
 				GenerateDebugInformation="true"
@@ -162,6 +163,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
+				PerUserRedirection="true"
 				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib gdi32.lib Dmoguids.lib"
 				ModuleDefinitionFile=".\GenDMOProp.def"
 				GenerateDebugInformation="true"
@@ -248,6 +250,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
+				PerUserRedirection="true"
 				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib gdi32.lib Dmoguids.lib"
 				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile=".\GenDMOProp.def"
@@ -338,6 +341,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
+				PerUserRedirection="true"
 				AdditionalDependencies="user32.lib advapi32.lib ole32.lib oleaut32.lib gdi32.lib Dmoguids.lib"
 				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile=".\GenDMOProp.def"
